# utf8pp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  print_per_char.cpp
src/: generate.py  utf8pp.hpp
test/: CMakeLists.txt  catch.hpp  parse.cpp  write.cpp
